--- a/Home.html
+++ b/Home.html
@@ -2,6 +2,9 @@
 <head>
     <title>Taniti tourism site page</title>
     <style>
+html{
+  background-color: rgb(142, 142, 255);
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -14,7 +17,7 @@ li {
   float: left;
 }
 
-li a {
+li a, .dropbtn {
   display: block;
   color: white;
   text-align: center;
@@ -22,40 +25,118 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
+li a:hover, .dropdown:hover .dropbtn {
   background-color: #111;
 }
-header img {
+li.dropdown{
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {background-color: #111;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#logo{
     float: right;
     height: 100px;
     width: 100px;
-    
-
 }
 #current{
     background-color: forestgreen;
 }
+#heading{
+  width: 100%;
+}
+.logo{
+  text-align: right;
+}
+table{
+  width: 100%
+}
+img{
+  height: 300px;
+  width: 200px;
+}
+#links{
+  text-align: center;
+}
+h2{text-align: center;}
+
     </style>
 </head>
 <body>
-<header><h1>Come visit Taniti</h1>
-  <img src="img\placeholder.webp" alt="placeholder"></header>  
-<br>
+<header>
+  <table id="heading">
+    <tr>
+      <td>
+        <h1>Come visit Taniti</h1>
+      </td>
+
+      <td class="logo">
+        <img src="img\placeholder.webp" alt="placeholder" id="logo"></header>
+      </td>
+</tr>
+  </table>
+</header>
 <nav>  
   <ul>
       <li><a href="Home.html" id="current">Home</a></li>
-      <li><a href="transportation.html">Flights</a></li>
       <li><a href="lodging.html">Hotels</a></li>
-      <li><a href="ground.html">Car Rentals</a></li>
-      <li><a href="rest.html">Restraunts</a></li>
-      <li><a href="grocery.html">Grocery Stores</a></li>
-      <li><a href="entertain.html">Entertainment</a></li>
-      <li><a href="sightseeing.html">Sightseeing</a></li>
-      <li><a href="FAQs.html">FAQs</a></li>
+      <li class="dropdown"><a href="transportation.html" class="dropbtn">Transportation</a>
+      <div class="dropdown-content">
+      <a href="transportation.html">Flights</a>
+      <a href="ground.html">Car Rentals</a>
+      </div>
+      </li>      
+      <li><a href="rest.html">Places to Eat</a></li>
+      <li class="dropdown"><a href="ThingstoDo.html" class="dropbtn">Things To Do</a>
+      <div class="dropdown-content">
+      <a href="grocery.html">Shopping</a>
+      <a href="entertain.html">Entertainment</a>
+      <a href="sightseeing.html">Sightseeing</a>
+      </div>
+      </li>
   </ul>
 </nav>
 <p>ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
   adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh.
 </p>
-
+<table id="links">
+  <tr>
+  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  </tr>
+  <tr>
+    <td><a href="lodging.html">Hotels</a></td>
+    <td><a href="transportation.html">Flights</a></td>
+    <td><a href="ground.html">Car Rentals</a></td>
+    <td><a href="rest.html">Places to Eat</a></td>
+    <td><a href="ThingstoDo.html">Things To Do</a</td>
+  </tr>
+</table>
+<h2>Frequently asked Questions</h2>
+<p>FAQ</p><br>
+<p>FAQ</p><br>
+<p>FAQ</p><br>
+<p>FAQ</p><br>
+<p>FAQ</p><br>
+<p>FAQ</p><br>
 </body>
