--- a/Home.html
+++ b/Home.html
@@ -99,7 +99,7 @@ h2{text-align: center;}
       <li><a href="lodging.html">Hotels</a></li>
       <li class="dropdown"><a href="transportation.html" class="dropbtn">Transportation</a>
       <div class="dropdown-content">
-      <a href="transportation.html">Flights</a>
+      <a href="flights.html">Flights</a>
       <a href="ground.html">Car Rentals</a>
       </div>
       </li>      
