--- a/Home.html
+++ b/Home.html
@@ -3,14 +3,14 @@
     <title>Taniti tourism site page</title>
     <style>
 html{
-  background-color: rgb(142, 142, 255);
+  background-color: #FCE166;
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #B3AC85;
 }
 
 li {
@@ -19,14 +19,14 @@ li {
 
 li a, .dropbtn {
   display: block;
-  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color: black;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: #111;
+  background-color: #85ffaa;
 }
 li.dropdown{
   display: inline-block;
@@ -34,19 +34,19 @@ li.dropdown{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #333;
+  background-color: #B3AC85;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 .dropdown-content a {
-  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  color: black;
 }
-.dropdown-content a:hover {background-color: #111;}
+.dropdown-content a:hover {background-color: #85ffaa;}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -57,7 +57,7 @@ li.dropdown{
     width: 100px;
 }
 #current{
-    background-color: forestgreen;
+    background-color: #93E9BE;
 }
 #heading{
   width: 100%;
@@ -76,25 +76,18 @@ img{
   text-align: center;
 }
 h2{text-align: center;}
-
+li p { font-size: 90%;
+padding-left: 10px;
+padding-right: 50px;
+}
     </style>
 </head>
 <body>
-<header>
-  <table id="heading">
-    <tr>
-      <td>
-        <h1>Come visit Taniti</h1>
-      </td>
 
-      <td class="logo">
-        <img src="img\placeholder.webp" alt="placeholder" id="logo"></header>
-      </td>
-</tr>
-  </table>
-</header>
+<header>
 <nav>  
   <ul>
+      <li><p><strong>Come visit Taniti</strong></p></li>
       <li><a href="Home.html" id="current">Home</a></li>
       <li><a href="lodging.html">Hotels</a></li>
       <li class="dropdown"><a href="transportation.html" class="dropbtn">Transportation</a>
@@ -113,8 +106,11 @@ h2{text-align: center;}
       </li>
   </ul>
 </nav>
-<p>ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh.
+</header>
+<p>Taniti is a small, tropical island in the Pacific. 
+  While the island has an area of less than 500 square miles, the terrain is varied and includes both sandy and rocky beaches, a small but safe harbor, lush tropical rainforests, and a mountainous interior that includes a small, active volcano. 
+  Taniti has an indigenous population of about 20,000. 
+  Until a recent increase in tourism, most the Tanitian economy was dominated by fishing or agriculture.
 </p>
 <table id="links">
   <tr>
@@ -125,11 +121,11 @@ h2{text-align: center;}
   <th><img src="img\placeholder.webp" alt="placeholder"></th>
   </tr>
   <tr>
-    <td><a href="lodging.html">Hotels</a></td>
-    <td><a href="transportation.html">Flights</a></td>
-    <td><a href="ground.html">Car Rentals</a></td>
-    <td><a href="rest.html">Places to Eat</a></td>
-    <td><a href="ThingstoDo.html">Things To Do</a</td>
+    <td>Hotels</td>
+    <td>Flights</td>
+    <td>Car Rentals</td>
+    <td>Places to Eat</td>
+    <td>Things To Do</td>
   </tr>
 </table>
 <h2>Frequently asked Questions</h2>
