--- a/Home.html
+++ b/Home.html
@@ -114,11 +114,11 @@ padding-right: 50px;
 </p>
 <table id="links">
   <tr>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
+  <th><img src="D479\img\Hotel.avif" alt="palm trees line the street infornt of a hotel"></th>
+  <th><img src="D479\img\flights.avif" alt="pa plane flying over water"></th>
+  <th><img src="D479\img\car rental.avif" alt="Young man standing near the car getting keys rental service"></th>
+  <th><img src="D479\img\restraunt.avif" alt="a long wooden table with white plates on it"></th>
+  <th><img src="D479\img\Thingstodo.avif" alt="an ariel view of an amusement park at night"></th>
   </tr>
   <tr>
     <td>Hotels</td>
