--- a/Home.html
+++ b/Home.html
@@ -121,11 +121,11 @@ padding-right: 50px;
   <th><img src="D479\img\Thingstodo.avif" alt="an ariel view of an amusement park at night"></th>
   </tr>
   <tr>
-    <td>Hotels</td>
-    <td>Flights</td>
-    <td>Car Rentals</td>
-    <td>Places to Eat</td>
-    <td>Things To Do</td>
+    <td><a href="D479\lodging.html">Hotels</a></td>
+    <td><a href="D479\flights.html">Flights</a></td>
+    <td><a href="D479\ground.html">Car Rentals</a></td>
+    <td><a href="D479\rest.html">Places to Eat</a></td>
+    <td><a href="D479\ThingstoDo.html">Things To Do</a></td>
   </tr>
 </table>
 <h2>Frequently asked Questions</h2>
