--- a/lodging.html
+++ b/lodging.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Taniti tourism site page</title>
+    <title>Lodging | Taniti tourism site page</title>
     <style>
 html{
   background-color: #FCE166;
