--- a/flights.html
+++ b/flights.html
@@ -116,8 +116,8 @@ Almost all visitors arrive to Taniti by air, though some arrive on a small cruis
 Taniti is served by a small airport that can accommodate small jets and propeller planes. 
 Taniti is in the process of expanding the airport so larger jets will be able to land on the island within the next few years.
 </p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="img\Flights\flights1.avif" alt="a large propeller plane sitting on top of and airport tarmac">
+<img src="img\Flights\boat2.avif" alt="a red and white boat sails on the ocean">
+<img src="img\Flights\flights3.avif" alt="a small blue and white plane flying in the sky">
+<img src="img\Flights\boat1.avif" alt="white ship on sea under white sky during daytime">
 </body>
