--- a/ground.html
+++ b/ground.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <head>
-    <title>Car Rentals | Taniti tourism site page</title>
+    <title>Car Rental | Taniti tourism site page</title>
     <style>
 html{
-  background-color: rgb(142, 142, 255);
+  background-color: #FCE166;
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #B3AC85;
 }
 
 li {
   float: left;
 }
 
-li a, .dropbtn {
+li a, .dropbtn1 {
   display: block;
-  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color: black;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
-  background-color: #111;
+li a:hover, .dropdown1:hover .dropbtn1 {
+  background-color: #85ffaa;
 }
-li.dropdown{
+li.dropdown1{
   display: inline-block;
 }
-.dropdown-content {
+.dropdown-content1 {
   display: none;
   position: absolute;
-  background-color: #333;
+  background-color: #B3AC85;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-.dropdown-content a {
-  color: white;
+.dropdown-content1 a {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  color: black;
 }
-.dropdown-content a:hover {background-color: #111;}
+.dropdown-content1 a:hover {background-color: #85ffaa;}
 
-.dropdown:hover .dropdown-content {
+.dropdown1:hover .dropdown-content1 {
   display: block;
 }
 #logo{
@@ -57,7 +57,7 @@ li.dropdown{
     width: 100px;
 }
 #current{
-    background-color: forestgreen;
+    background-color: #93E9BE;
 }
 #heading{
   width: 100%;
@@ -69,78 +69,58 @@ table{
   width: 100%
 }
 img{
-  height: 300px;
-  width: 200px;
+  padding: 10px;
+  width: 350px;
+  height: 350px;
 }
 #links{
   text-align: center;
 }
 h2{text-align: center;}
+li p { font-size: 90%;
+padding-left: 10px;
+padding-right: 50px;
+}
 
     </style>
 </head>
 <body>
-<header>
-  <table id="heading">
-    <tr>
-      <td>
-        <h1>Come visit Taniti</h1>
-      </td>
 
-      <td class="logo">
-        <img src="img\placeholder.webp" alt="placeholder" id="logo"></header>
-      </td>
-</tr>
-  </table>
-</header>
+<header>
 <nav>  
   <ul>
+      <li><p><strong>Come visit Taniti</strong></p></li>
       <li><a href="Home.html">Home</a></li>
-      <li><a href="lodging.html">Hotels</a></li>
-      <li class="dropdown"><a href="transportation.html" class="dropbtn">Transportation</a>
-      <div class="dropdown-content">
-      <a href="flights.html">Flights</a>
+      <li><a href="lodging.html">Lodging</a></li>
+      <li class="dropdown1"><a href="transportation.html" class="dropbtn1">Transportation</a>
+      <div class="dropdown-content1">
+      <a href="flights.html" >Flights</a>
       <a href="ground.html" id="current">Car Rentals</a>
       </div>
       </li>      
       <li><a href="rest.html">Places to Eat</a></li>
-      <li class="dropdown"><a href="ThingstoDo.html" class="dropbtn">Things To Do</a>
-      <div class="dropdown-content">
+      <li class="dropdown1"><a href="ThingstoDo.html" class="dropbtn1">Things To Do</a>
+      <div class="dropdown-content1">
       <a href="grocery.html">Shopping</a>
       <a href="entertain.html">Entertainment</a>
       <a href="sightseeing.html">Sightseeing</a>
       </div>
       </li>
+      <li><a href="Booking.html">Booking</a></li>
+      <li><a href="Review.html">Review</a></li>
   </ul>
 </nav>
-<p>ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh.
+</header>
+<p>
+Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. 
+Private buses serve the rest of the island. 
+Taxis are available in Taniti City, and rental cars can be rented from a local rental agency near the airport. 
+Bikes and helmets are available to rent from several vendors (helmets are required by law). 
+Taniti City is fairly flat and very walkable. 
+Many tourists stay in the area surrounding Merriton Landing: this area is easy to explore on foot.
 </p>
-<table id="links">
-  <tr>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  </tr>
-  <tr>
-    <td><a href="lodging.html">Hotels</a></td>
-    <td><a href="transportation.html">Flights</a></td>
-    <td><a href="ground.html">Car Rentals</a></td>
-    <td><a href="rest.html">Places to Eat</a></td>
-    <td><a href="ThingstoDo.html">Things To Do</a</td>
-  </tr>
-</table>
+<img src="img\Car Rental\bus1.avif" alt="a large white bus parked on the side of the road">
+<img src="img\Car Rental\taxi1.avif" alt="yellow taxi cab">
+<img src="img\Car Rental\car rental1.avif" alt="Young man and woman in a car rental service lease contract">
+<img src="img\Car Rental\bike1.avif" alt="a person riding a bike on a beach">
 </body>
