--- a/Home.html
+++ b/Home.html
@@ -115,7 +115,7 @@ padding-right: 50px;
       <li class="dropdown1"><a href="transportation.html" class="dropbtn1">Transportation</a>
       <div class="dropdown-content1">
       <a href="flights.html">Flights</a>
-      <a href="ground.html">Car Rentals</a>
+      <a href="ground.html">Ground Transport</a>
       </div>
       </li>      
       <li><a href="rest.html">Places to Eat</a></li>
