--- a/grocery.html
+++ b/grocery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head>Shopping | Taniti tourism site page</title>
+<head>
+  <title>Shopping | Taniti tourism site page</title>
     <style>
 html{
   background-color: #FCE166;
@@ -90,7 +91,7 @@ padding-right: 50px;
   <ul>
       <li><p><strong>Come visit Taniti</strong></p></li>
       <li><a href="Home.html">Home</a></li>
-      <li><a href="lodging.html" id="current">Lodging</a></li>
+      <li><a href="lodging.html">Lodging</a></li>
       <li class="dropdown1"><a href="transportation.html" class="dropbtn1">Transportation</a>
       <div class="dropdown-content1">
       <a href="flights.html">Flights</a>
@@ -100,7 +101,7 @@ padding-right: 50px;
       <li><a href="rest.html">Places to Eat</a></li>
       <li class="dropdown1"><a href="ThingstoDo.html" class="dropbtn1">Things To Do</a>
       <div class="dropdown-content1">
-      <a href="grocery.html">Shopping</a>
+      <a href="grocery.html" id="current">Shopping</a>
       <a href="entertain.html">Entertainment</a>
       <a href="sightseeing.html">Sightseeing</a>
       </div>
@@ -114,7 +115,7 @@ padding-right: 50px;
   Taniti has two supermarkets, two smaller grocery stores, and one convenience store that is open 24 hours a day. 
 </p>
 <img src="img\Shopping\store1.avif" alt="white and red labeled pack on a white shelf">
-<img src="img\Shopping\hotel2.avif" alt="assorted bottels on display in store">
+<img src="img\Shopping\store2.avif" alt="assorted bottels on display in store">
 <img src="img\Shopping\store3.avif" alt="a woman standing in front of a display of food">
 <img src="img/Shopping/store4.avif" alt="assorted fruits on brown wooden shelf">
 </body>
