--- a/sightseeing.html
+++ b/sightseeing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Shopping | Taniti tourism site page</title>
+  <title>Sightseeing | Taniti tourism site page</title>
     <style>
 html{
   background-color: #FCE166;
