--- a/Home.html
+++ b/Home.html
@@ -209,4 +209,14 @@ padding-right: 50px;
 </div>
 </div>
 <br><br><br><br>
+<h2>Questions?</h2>
+<form>
+<label for="Name">Name:</label><br>
+<input type="text" id="Name" name="Name"><br>
+<label for="Email">Email:</label><br>
+<input type="email" id="Email" name="Email"><br>
+<label for="question">Questions:</label><br>
+<textarea id="quesiton" name="quesiton" rows="10" cols="30"></textarea><br>
+<input type="submit" value="Submit">
+</form>
 </body>
