--- a/ThingstoDo.html
+++ b/ThingstoDo.html
@@ -111,6 +111,7 @@ h2{text-align: center;}
       <a href="sightseeing.html">Sightseeing</a>
       </div>
       </li>
+      <li><a href="Booking.html">Booking</a></li>
   </ul>
 </nav>
 <p>ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
