--- a/ThingstoDo.html
+++ b/ThingstoDo.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <head>
-    <title>Things To Do | Taniti tourism site page</title>
+  <title>Sightseeing | Taniti tourism site page</title>
     <style>
 html{
-  background-color: rgb(142, 142, 255);
+  background-color: #FCE166;
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #B3AC85;
 }
 
 li {
   float: left;
 }
 
-li a, .dropbtn {
+li a, .dropbtn1 {
   display: block;
-  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color: black;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
-  background-color: #111;
+li a:hover, .dropdown1:hover .dropbtn1 {
+  background-color: #85ffaa;
 }
-li.dropdown{
+li.dropdown1{
   display: inline-block;
 }
-.dropdown-content {
+.dropdown-content1 {
   display: none;
   position: absolute;
-  background-color: #333;
+  background-color: #B3AC85;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-.dropdown-content a {
-  color: white;
+.dropdown-content1 a {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  color: black;
 }
-.dropdown-content a:hover {background-color: #111;}
+.dropdown-content1 a:hover {background-color: #85ffaa;}
 
-.dropdown:hover .dropdown-content {
+.dropdown1:hover .dropdown-content1 {
   display: block;
 }
 #logo{
@@ -57,7 +57,7 @@ li.dropdown{
     width: 100px;
 }
 #current{
-    background-color: forestgreen;
+    background-color: #93E9BE;
 }
 #heading{
   width: 100%;
@@ -69,43 +69,38 @@ table{
   width: 100%
 }
 img{
-  height: 300px;
-  width: 200px;
+  padding: 10px;
+  width: 350px;
+  height: 350px;
 }
 #links{
   text-align: center;
 }
 h2{text-align: center;}
+li p { font-size: 90%;
+padding-left: 10px;
+padding-right: 50px;
+}
 
     </style>
 </head>
 <body>
-<header>
-  <table id="heading">
-    <tr>
-      <td>
-        <h1>Come visit Taniti</h1>
-      </td>
 
-      <td class="logo">
-        <img src="img\placeholder.webp" alt="placeholder" id="logo"></header>
-      </td>
-</tr>
-  </table>
-</header>
+<header>
 <nav>  
   <ul>
+      <li><p><strong>Come visit Taniti</strong></p></li>
       <li><a href="Home.html">Home</a></li>
-      <li><a href="lodging.html">Hotels</a></li>
-      <li class="dropdown"><a href="transportation.html" class="dropbtn">Transportation</a>
-      <div class="dropdown-content">
+      <li><a href="lodging.html">Lodging</a></li>
+      <li class="dropdown1"><a href="transportation.html" class="dropbtn1">Transportation</a>
+      <div class="dropdown-content1">
       <a href="flights.html">Flights</a>
-      <a href="ground.html">Car Rentals</a>
+      <a href="ground.html">Ground Transport</a>
       </div>
       </li>      
       <li><a href="rest.html">Places to Eat</a></li>
-      <li class="dropdown"><a href="ThingstoDo.html" class="dropbtn" id="current">Things To Do</a>
-      <div class="dropdown-content">
+      <li class="dropdown1"><a href="ThingstoDo.html" class="dropbtn1" id="current">Things To Do</a>
+      <div class="dropdown-content1">
       <a href="grocery.html">Shopping</a>
       <a href="entertain.html">Entertainment</a>
       <a href="sightseeing.html">Sightseeing</a>
@@ -114,34 +109,33 @@ h2{text-align: center;}
       <li><a href="Booking.html">Booking</a></li>
   </ul>
 </nav>
-<p>ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh. ashdasdaksdh kasd ajsdhaksdhka jdasdjhas. asidhasdhaksdhasjd hkjashdjahaaa jsdahdasasasjha qkjshadkjahsjd asjk hakjsdh akssadjsadhaksdh akjda shajdh. 
-  adajksdhakjdhsdfhkshdsk asdhasd asdhaksdh  asjdadsdexz  sd sdksheukh sdj dfwrufvjkh uo uoshfsrifsfsufhseiufhrusi vh rihusfhsufsjkefwekfh.
+</header>
+<h2>Shopping</h2>
+<p>
+  Taniti has two supermarkets, two smaller grocery stores, and one convenience store that is open 24 hours a day. 
 </p>
-<table id="links">
-  <tr>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  <th><img src="img\placeholder.webp" alt="placeholder"></th>
-  </tr>
-  <tr>
-    <td><a href="lodging.html">Hotels</a></td>
-    <td><a href="transportation.html">Flights</a></td>
-    <td><a href="ground.html">Car Rentals</a></td>
-    <td><a href="rest.html">Places to Eat</a></td>
-    <td><a href="ThingstoDo.html">Things To Do</a</td>
-  </tr>
-</table>
+<img src="img\Shopping\store1.avif" alt="white and red labeled pack on a white shelf">
+<img src="img\Shopping\store2.avif" alt="assorted bottels on display in store">
+<img src="img\Shopping\store3.avif" alt="a woman standing in front of a display of food">
+<img src="img/Shopping/store4.avif" alt="assorted fruits on brown wooden shelf">
+<h2>Entertainment</h2>
+<p>
+  Most people visit Taniti to enjoy the beaches, explore the rainforest, and to visit the volcano. 
+  However, there are other things to do, including visiting a local history museum, going on chartered fishing tours, snorkeling, zip-lining in the rainforest, visiting several pubs, including a microbrewery, dancing at a new dance club, seeing a movie, taking helicopter rides, playing at an arcade, visiting art galleries, and bowling. 
+  Also, a nine-hole golf course should be operational by next year. 
+  Many of these activities are located in Merriton Landing, which is a rapidly developing area on the north side of Yellow Leaf Bay. 
+</p>
+<img src="img\Enter\Enter1.avif" alt="an aerial view of a volcano in the middle of the night">
+<img src="img\Enter\Enter2.avif" alt="a room with a large display of antique furniture">
+<img src="img\Enter\enter3.avif" alt="golf field under clear blue sky">
+<img src="img/Enter/enter4.avif" alt="a beach with waves and mountains in the background">
+<h2>Sightseeing</h2>
+<p>
+  Most tourists spend most of their time in Taniti City, which boasts native architecture and nearby white, sandy beaches that encircle Yellow Leaf Bay. 
+  Other popular activities include boat or bus tours of the island, hikes in the rainforest, or visits to Taniti's active volcano.
+</p>
+<img src="img\Sight\sight1.avif" alt="a view of a building with a balcony and a balcony">
+<img src="img\Sight\sight2.webp" alt="Terracotta building and Blue sky">
+<img src="img\Sight\sight3.avif" alt="brown beach umbrellas on beach during daytime">
+<img src="img/Sight/sight4.avif" alt="landscape photo of tress on mountain">
 </body>
