--- a/Home.html
+++ b/Home.html
@@ -102,9 +102,14 @@ padding-right: 50px;
   display: inline-block;
   max-width: fit-content;
 }
+#button{
+  float: inline-end;
+  padding-top: 12px;
+  padding-right: 15px;
+}
     </style>
 </head>
-<body>
+<body id="body">
 
 <header>
 <nav>  
@@ -127,6 +132,7 @@ padding-right: 50px;
       </div>
       </li>
       <li><a href="Booking.html">Booking</a></li>
+      <li id="button"><button type="button" onclick="document.getElementById('body').style.fontSize = '35px'">aA</button></li>
   </ul>
 </nav>
 </header>
