--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ padding-right: 50px;
 <nav>  
   <ul>
       <li><p><strong>Come visit Taniti</strong></p></li>
-      <li><a href="Home.html" id="current">Home</a></li>
+      <li><a href="index.html" id="current">Home</a></li>
       <li><a href="lodging.html">Lodging</a></li>
       <li class="dropdown1"><a href="transportation.html" class="dropbtn1">Transportation</a>
       <div class="dropdown-content1">
