--- a/Booking.html
+++ b/Booking.html
@@ -136,7 +136,7 @@ padding-right: 50px;
   </ul>
 </nav>
 </header>
-<form action="/action_page.php" method="post">
+<form action="/action_page.php">
     <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname" required><br>
     <label for="lname">Last Name:</label><br>
@@ -152,9 +152,9 @@ padding-right: 50px;
     <label for="country">Country of Origin:</label><br>
     <input type="text" id="country" name="country" required><br>
     <label for="numpeople">Amount in Party:</label><br>
-    <input type="text" id="numpeople" name="numpeople"><br>
+    <input type="text" id="numpeople" name="numpeople" required><br>
     <label for="time">Length of Stay(days):</label><br>
-    <input type="text" id="time" name="time"><br>
+    <input type="text" id="time" name="time" required><br>
     <fieldset>
     <legend>Transportation to island</legend>
     <input type="radio" id="airplane" name="transport" value="Airplane">
