--- a/Booking.html
+++ b/Booking.html
@@ -136,7 +136,7 @@ padding-right: 50px;
   </ul>
 </nav>
 </header>
-<form action="booking.php" method="post">
+<form action="/action.php" method="post">
     <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname" required><br>
     <label for="lname">Last Name:</label><br>
