--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@ padding-right: 50px;
 </div>
 <br><br><br><br>
 <h2>Questions?</h2>
-<form action="booking.php" method="post">
-<label for="Name">Name:</label><br>
+<form action="/action.php">Name:</label><br>
 <input type="text" id="Name" name="Name"><br>
 <label for="Email">Email:</label><br>
 <input type="email" id="Email" name="Email"><br>
