--- a/entertain.html
+++ b/entertain.html
@@ -123,7 +123,7 @@ padding-right: 50px;
   Many of these activities are located in Merriton Landing, which is a rapidly developing area on the north side of Yellow Leaf Bay. 
 </p>
 <img src="img\Enter\Enter1.avif" alt="an aerial view of a volcano in the middle of the night">
-<img src="img\Enter\Enter2.webp" alt="a room with a large display of antique furniture">
+<img src="img\Enter\Enter2.avif" alt="a room with a large display of antique furniture">
 <img src="img\Enter\enter3.avif" alt="golf field under clear blue sky">
 <img src="img/Enter/enter4.avif" alt="a beach with waves and mountains in the background">
 </body>
